--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: NODE_ENV=production npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
